prodclone dev workflow; db update (#2216)
* helpful db scripts in ./bin

* make start-prodclone workflow

* avoid running datadog in math for local/dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -37,7 +37,8 @@ services:
       # nrepl port
       - "18975:18975"
     environment:
-      CHOKIDAR_USEPOLLING: "true"
+      - CHOKIDAR_USEPOLLING=true
+      - DD_ENABLED=false
 
   postgres:
     restart: no
