--- a/example.env
+++ b/example.env
@@ -29,6 +29,11 @@ POSTGRES_PASSWORD=oiPorg3Nrz0yqDLE
 DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@postgres:5432/polis-dev
 # Makefile will read this to determine if the database is running in a docker container.
 POSTGRES_DOCKER=true
+# PostgreSQL initialization mode (only applies when POSTGRES_DOCKER=true)
+# false (default): Use migrations from server/postgres/migrations/*.sql (clean dev setup)
+# true: Restore from prodclone.dump file (must exist in project root directory)
+# Note: Each mode uses a separate Docker volume for easy switching without data loss
+USE_PRODCLONE=false
 
 
 ###### DOCKER CONCERNS ######
