bang head against wall

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       dockerfile: Dockerfile
       args:
         - PUBLIC_SERVICE_URL=${PUBLIC_SERVICE_URL}
+        - PUBLIC_AUTH_NAMESPACE=${AUTH_NAMESPACE}
         - OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
         - OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
     container_name: client-participation-alpha
@@ -41,6 +42,7 @@ services:
       - "4321:4321"
     environment:
       - PUBLIC_SERVICE_URL=${PUBLIC_SERVICE_URL}
+      - PUBLIC_AUTH_NAMESPACE=${AUTH_NAMESPACE}
       - INTERNAL_SERVICE_URL=${INTERNAL_SERVICE_URL}
       - PUBLIC_OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
       - PUBLIC_OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
