--- a/client-participation/Dockerfile
+++ b/client-participation/Dockerfile
@@ -9,10 +9,12 @@ ARG EMBED_SERVICE_HOSTNAME
 ARG GA_TRACKING_ID
 ARG OIDC_CACHE_KEY_PREFIX
 ARG OIDC_CACHE_KEY_ID_TOKEN_SUFFIX
+ARG AUTH_NAMESPACE
 ENV EMBED_SERVICE_HOSTNAME=${EMBED_SERVICE_HOSTNAME}
 ENV GA_TRACKING_ID=${GA_TRACKING_ID}
 ENV OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
 ENV OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
+ENV AUTH_NAMESPACE=${AUTH_NAMESPACE}
 
 # Set default NODE_ENV to production unless overridden at build time with --build-arg NODE_ENV=development
 ARG NODE_ENV
