--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       - DD_LOGS_INJECTION=true
       - DD_TRACE_SAMPLE_RATE="1"
       - DD_GIT_REPOSITORY_URL="github.com/compdemocracy/polis"
+      - AWS_LOG_GROUP_NAME=${AWS_LOG_GROUP_NAME}
     env_file:
       - ${SERVER_ENV_FILE:-.env}
     image: 050917022930.dkr.ecr.us-east-1.amazonaws.com/polis/server:latest
