--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.55.1",
     "@anthropic-ai/tokenizer": "^0.0.4",
+    "@aws-sdk/client-cloudwatch-logs": "^3.911.0",
     "@aws-sdk/client-dynamodb": "^3.840.0",
     "@aws-sdk/client-s3": "^3.840.0",
     "@aws-sdk/client-sesv2": "^3.907.0",
