--- a/math/.gitignore
+++ b/math/.gitignore
@@ -1,24 +1,30 @@
-/target
-/lib
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
-*.class
+.calva/
+.cpcache
+.env
+.gorilla-port
 .lein-deps-sum
+.lein-env
 .lein-failures
+.lein-git-deps/debug-repl
+.lein-git-deps/hiphip
 .lein-plugins
 .lein-repl-history
-*.swo
-db/
-.lein-env
 .nrepl-port
+*.class
+*.jar
+*.swo
+/checkouts
+/classes
+/lib
+/target
+data
+db/
+errorconv*
+old
+pom.xml
+pom.xml.asc
 scratch
 src/polismath/play.clj
-old
-.gorilla-port
-.lein-git-deps/hiphip
 wiki
 .lein-git-deps/debug-repl
 data
