--- a/math/Dockerfile
+++ b/math/Dockerfile
@@ -1,11 +1,15 @@
 FROM docker.io/clojure:temurin-17-tools-deps
 
 WORKDIR /app
-COPY . .
 
 RUN curl -L -o /app/dd-java-agent.jar 'https://dtdg.co/latest-java-tracer'
 
 # Install clojure and fetch dependencies
+# Copy deps.edn first and fetch dependencies
+COPY deps.edn .
 RUN clojure -A:dev -P
+
+# Then copy the rest of the source code
+COPY . .
 
 CMD ["./bin/run"]
