--- a/client-report/Dockerfile
+++ b/client-report/Dockerfile
@@ -3,7 +3,7 @@
 # But this file is still useful for development or deployments that do not use
 # the docker compose configuration.
 
-FROM docker.io/node:lts-alpine
+FROM docker.io/node:24-alpine
 
 # Set default NODE_ENV to production unless overridden at build time with --build-arg NODE_ENV=development
 ARG NODE_ENV
