--- a/example.env
+++ b/example.env
@@ -43,6 +43,10 @@ COMPOSE_PROJECT_NAME=polis-${TAG}
 # Makefile will read this to determine if local services (dynamodb, minio, ollama) should be started.
 LOCAL_SERVICES_DOCKER=true
 
+###### DELPHI INSTANCE SIZE ######
+# Should be dev (process all jobs), large (process large jobs only), normal or small (only normal jobs).
+# Leave empty for autodetection on AWS deployment. See delphi/DELPHI_AUTOSCALING_SETUP.md for configuring instance size in production.
+INSTANCE_SIZE=dev
 
 ###### PORTS ######
 API_SERVER_PORT=5000
