--- a/delphi/pyproject.toml
+++ b/delphi/pyproject.toml
@@ -6,12 +6,12 @@ build-backend = "hatchling.build"
 name = "delphi-polis"
 version = "0.1.0"
 description = "Mathematical analytics pipeline for Polis conversations"
-requires-python = ">=3.10"
+requires-python = ">=3.12,<3.13" # Pin to Python 3.12.x
 
 dependencies = [
     "numpy>=1.26.4,<2.0",
     "pandas>=2.1.4",
-    "sqlalchemy==2.0.29",
+    "sqlalchemy>=2.0.36",
     "psycopg2-binary==2.9.10",
     "boto3==1.34.70",
     "scikit-learn>=1.4.2",
@@ -61,7 +61,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest==8.0.0",
+    "pytest>=8.0.0",
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.0.0",
     "httpx>=0.23.0",
