--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: 2. Create .env file for CI
       run: |
+        # Use test.env to populate the .env file
+        # docker-compose will automatically read this .env file
         if [ -f "test.env" ]; then
           cp test.env .env
           echo "Using test.env for CI."
@@ -34,36 +36,36 @@ jobs:
           echo "::error::test.env file not found!"
           exit 1
         fi
+        
+        # Override hosts to use service names for container networking
+        echo "POSTGRES_HOST=postgres" >> .env
+        echo "DYNAMODB_ENDPOINT=http://dynamodb:8000" >> .env
+        echo "AWS_S3_ENDPOINT=http://minio:9000" >> .env
 
     - name: 3. Build Docker images
       run: |
-        # Build all images, including delphi
-        docker compose \
-          -f docker-compose.test.yml \
-          --env-file .env \
-          build
+        # Build all images using the default docker-compose.yml
+        # and the .env file we just created.
+        docker compose build
 
     - name: 4. Start Dependency Services
       run: |
         # Start ONLY the database services in the background
-        # We use the profiles, which do NOT include 'delphi'
+        # using the profiles defined in docker-compose.yml
         docker compose \
-          -f docker-compose.test.yml \
           --profile postgres \
           --profile local-services \
           up -d
         
         echo "Waiting for services to be healthy..."
         sleep 15 
-        docker compose -f docker-compose.test.yml ps
+        docker compose ps
 
     - name: 5. Run Delphi Pytest
       run: |
-        # Use 'docker compose run' which creates a NEW container
-        # and ALLOWS the -v flag. This container will connect
-        # to the services started in the previous step.
+        # Use 'docker compose run' which finds the 'delphi' service
+        # in the default docker-compose.yml and mounts our tests.
         docker compose \
-          -f docker-compose.test.yml \
           run \
           --rm \
           -v "${{ github.workspace }}/delphi/tests:/app/tests" \
@@ -74,14 +76,14 @@ jobs:
       if: failure()
       run: |
         echo "=== Delphi service logs ==="
-        docker compose -f docker-compose.test.yml logs delphi || true
+        docker compose logs delphi || true
         echo "=== Postgres service logs ==="
-        docker compose -f docker-compose.test.yml logs postgres || true
+        docker compose logs postgres || true
         echo "=== DynamoDB service logs ==="
-        docker compose -f docker-compose.test.yml logs dynamodb || true
+        docker compose logs dynamodb || true
 
     - name: 7. Clean up services
       if: always()
       run: |
         echo "Cleaning up services..."
-        docker compose -f docker-compose.test.yml down -v
+        docker compose --profile postgres --profile local-services down -v
